# tickets-processor

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test.py  test_main.http
core/: config.py
tickets_processor/: main.py
tickets_processor/clients/: dynamodb.py  jira.py  redis.py  sqs.py
tickets_processor/core/: config.py
tickets_processor/dtos/: tickets.py
tickets_processor/routers/: charts.py  health.py  tickets.py
tickets_processor/services/: tickets.py
worker/: main.py
