[tool.poetry]
name = "tickets-processor"
version = "0.1.0"
description = ""
authors = ["Yuri \"Pirata\" Araújo <yaraujo@zak.app>"]
readme = "README.md"
packages = [{include = "tickets_processor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
