[tool.poetry]
name = "tickets-processor"
version = "0.1.0"
description = ""
authors = ["Yuri \"Pirata\" Araújo <yaraujo@zak.app>"]
readme = "README.md"
packages = [{include = "tickets_processor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
httpx = "^0.23.0"
backoff = "^2.2.1"
environs = "^9.5.0"
python-json-logger = "^2.0.4"
Faker = "^15.0.0"
celery = "^5.2.7"
flower = "^1.2.0"
redis = "^4.3.4"
eventlet = "^0.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
